--- a/repulo.html
+++ b/repulo.html
@@ -7,65 +7,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="repulo.css">
-    <title>Magnetofonok</title>
+    <title>Repülőgépek </title>
 </head>
 
 <body>
     <div class="container">
         <div class="row gradient">
             <div class="col-md-12">
-                <h1>Magnetofonok</h1>
+                <h1>Repülőgépek </h1>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
                 <h2>Története</h2>
-                <p>A digitális hangrögzítést megelőzően hatalmas népszerűségnek örvendett a mágneses hangrögzítés,
-                    amelynek alapjait már 1900-ban szabadalmaztatta <a
-                        href="https://en.wikipedia.org/wiki/Valdemar_Poulsen">Valdemar Poulsen</a>. A technológia
-                    hatalmas fejlődésen ment keresztül, míg a '80-as évekre általánossá váltak a kompakt kazetták és a
-                    magnetofonok (divatos nevükön <span class="dolt">magnók</span>) használata.</p>
-                <p>Nézzük meg, hogyan is működtek ezek az eszközök!</p>
-                <p>Az alábbi ábrán egy magnókazetta és a lejátszásához szükséges magnetofon mechanikája látható.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non accusamus neque quos, ducimus ut
+                    adipisci quam hic? Libero minima <a
+                        href="https://hu.wikipedia.org/wiki/A_rep%C3%BCl%C3%A9s_t%C3%B6rt%C3%A9nete">A repülés
+                        történet</a> cupiditate neque, reprehenderit recusandae repülők harum labore. </p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima laboriosam accusantium perspiciatis.
+                </p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus fugiat eos debitis nostrum
+                    reprehenderit accusantium harum delectus. Placeat hic labore laudantium, corporis repellat
+                    laboriosam maxime ratione, consectetur <span class="dolt">repülők</span> eveniet veritatis pariatur
+                    odio. Reiciendis hic
+                    corporis voluptatem nesciunt quisquam, dolores perferendis distinctio quia quae vel maxime unde,
+                    perspiciatis officiis eum nam minus! Odio.
+                </p>
                 <img src="repulo.webp" class="w-100"
-                    title="Magnókazetta egy magnetofonban. Jól láthatóak a lejátszáshoz, a rögzítéshez és a szalagtovábbításhoz szükséges alkatrészek">
-                <h2 class="margofent">A magnetofonok megjelenési formái</h2>
+                    title="Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum maxime doloremque dolores tenetur ratione optio fuga velit? Cum, magni numquam nemo ipsum magnam ratione mollitia accusantium quibusdam totam? Nihil minima cum natus.">
+                <h2 class="margofent">A Repülőgépek megjelenési formái</h2>
                 <div class="row">
                     <div class="col-md-4">
                         <a href="m1.jpg" target="_blank">
                             <img src="m1.jpg" class="w-100 img-thumbnail">
                         </a>
-                        <p class="subtitle">Otthoni lejátszó</p>
+                        <p class="subtitle">Pilótafülke</p>
                     </div>
                     <div class="col-md-4">
                         <a href="m2.jpg" target="_blank">
                             <img src="m2.jpg" class="w-100 img-thumbnail">
                         </a>
-                        <p class="subtitle">Autósmagnó</p>
+                        <p class="subtitle">Utastér</p>
                     </div>
                     <div class="col-md-4">
                         <a href="m3.jpg" target="_blank">
                             <img src="m3.jpg" class="w-100 img-thumbnail">
                         </a>
-                        <p class="subtitle">Walkman - a hordozható lejátszó</p>
+                        <p class="subtitle">Business Class utasosztály</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6" id="jobboszlop">
-                <h2>A magnók alkatrészei</h2>
+                <h2>A szárny alkatrészei</h2>
                 <img src="szarny.png" class="w-100 keretes">
                 <ol>
-                    <li>Szalagtovábbító görgő</li>
-                    <li>Lejátszó- és rögzítőfej</li>
-                    <li>Törlőfej</li>
-                    <li>A kazetta pozícióját biztosító szegecsek</li>
-                    <li>Csévélőmotor</li>
+                    <li>Winglet</li>
+                    <li>Kis sebességű csűrő (a kilépőélen)</li>
+                    <li>Nagy sebességű csűrő (a kilépőélen)</li>
+                    <li>Fékszárnyak mozgatómechanizmusa</li>
+                    <li>Krüger-lap (a belépőélen)</li>
+                    <li>Orrsegédszárny (a belépőélen)</li>
+                    <li>Háromszorosan réselt belső fékszárny (a kilépőélen)</li>
+                    <li>Háromszorosan réselt külső fékszárny (a kilépőélen)</li>
+                    <li>Áramlásrontó lemez (spoiler)</li>
+                    <li>Féklap (áramlásrontó lemez)</li>
                 </ol>
             </div>
         </div>
         <div class="row gradient footer">
             <div class="col-md-12">
-                <p>A honlapot <strong>Tóth Zoltán</strong> készítette 2022-ben.<br>&copy; Minden jog fenntartva!</p>
+                <p>A honlapot <strong>Jack Bauer</strong> készítette 2077-ben.<br>&copy; Minden jog fenntartva!</p>
             </div>
         </div>
     </div>
